# cloudscraper

./: pyproject.toml
cloudscraper/: __init__.py  cloudflare.py  exceptions.py  help.py
cloudscraper/captcha/: 2captcha.py  9kw.py  __init__.py  anticaptcha.py  capmonster.py  capsolver.py  deathbycaptcha.py
cloudscraper/interpreters/: __init__.py  chakracore.py  encapsulated.py  js2py.py  jsunfuck.py  native.py  nodejs.py  v8.py
cloudscraper/user_agent/: __init__.py
tests/: __init__.py  test_cloudscraper.py
